@@ -1,49 +1,0 @@
-##NAME: EELT_mirror_reflectivity_mgf2agal.dat.txt
-##DATE: 28-05-13
-##TYPE: EELT mirror reflectivity curve
-##AUTHOR: ESO EELT DRM
-##VERSION: 1.0
-##EXTRA: MgF2 protected Ag/Al
-#Wavelength [um], Reflectivity  
- 0.317             0.243
- 0.319             0.305
- 0.321             0.452
- 0.323             0.551
- 0.326             0.636
- 0.329             0.735
- 0.331             0.790
- 0.335             0.833
- 0.338             0.865
- 0.346             0.880
- 0.358             0.886
- 0.366             0.909
- 0.372             0.926
- 0.381             0.944
- 0.392             0.955
- 0.399             0.959
- 0.415             0.965
- 0.439             0.968
- 0.462             0.970
- 0.504             0.971
- 0.558             0.971
- 0.599             0.970
- 0.660             0.971
- 0.718             0.973
- 0.783             0.975
- 0.839             0.977
- 0.898             0.979
- 0.949             0.981
- 1.000             0.982
- 1.058             0.983
- 1.136             0.984
- 1.199             0.985
- 1.288             0.985
- 1.383             0.986
- 1.489             0.986
- 1.569             0.987
- 1.684             0.988
- 1.777             0.988
- 1.876             0.989
- 1.944             0.989
- 2.000             0.990
-20.000             0.990
