@@ -24,12 +24,12 @@
 0.775,3.1498e-01
 0.800,2.8227e-01
 0.825,2.6046e-01
-0.850,2.3827e-01
-0.875,2.1387e-01
-0.900,1.8747e-01
-0.925,1.6258e-01
-0.950,1.3827e-01
-0.975,1.1635e-01
+0.850,0.0000e+00
+0.875,0.0000e+00
+0.900,0.0000e+00
+0.925,0.0000e+00
+0.950,0.0000e+00
+0.975,0.0000e+00
 1.000,0.0000e+00
 1.025,0.0000e+00
 1.050,0.0000e+00
