@@ -273,7 +273,7 @@ def main(datacube, outdir, DIT, NDIT, grating, spax, seeing, zenith_ang, telesco
 
     #Total throughput cube
     throughput_cube = create_thruput_cube(out_cube.shape, lambs, delta_lambda, grating, zenith_ang, 
-    [config_data['trans_w_grat'],config_data['trans_wo_grat']], sky=True, telescope=True, instrument=True, QE=True)
+    [config_data['trans_wo_grat']], sky=True, telescope=True, instrument=True, QE=True)
 
     #Create object cube (enter spaxel as arcsec = mas*1.E-3)
     #[units of passed values: lambs: [um], DIT: [s], outspax: [arcsec], pix_disp: [um/pixel], area: [m2]]
@@ -283,10 +283,10 @@ def main(datacube, outdir, DIT, NDIT, grating, spax, seeing, zenith_ang, telesco
 
     #Instrument + Quantum efficiency cube
     inst_qe_cube = create_thruput_cube(out_cube.shape, lambs, delta_lambda, grating, zenith_ang,
-    [config_data['trans_w_grat'],config_data['trans_wo_grat']], sky=False, telescope=False, instrument=True, QE=True)
+    [config_data['trans_wo_grat']], sky=False, telescope=False, instrument=True, QE=True)
     #Quantum efficiency cube
     qe_cube = create_thruput_cube(out_cube.shape, lambs, delta_lambda, grating, zenith_ang,
-    [config_data['trans_w_grat'],config_data['trans_wo_grat']], sky=False, telescope=False, instrument=False, QE=True)
+    [config_data['trans_wo_grat']], sky=False, telescope=False, instrument=False, QE=True)
 
     #Create background cube [sky + telescope + instrument photons]
     background_cube, background_shot_noise, noiseless_background = create_background_cube(out_cube.shape, lambs, throughput_cube, inst_qe_cube,
